--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "glob": "^7.1.6",
     "chokidar": "^3.4.0",
     "minimist": "^1.2.5",
-    "tslib": "^2.0.0",
-    "debug": "^4.1.1"
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
@@ -29,6 +28,7 @@
     "@types/prettier": "^2.0.0",
     "fs-extra": "^9.0.0",
     "jest": "^26.0.1",
+    "p-defer": "3.0.0",
     "prettier": "^2.0.5",
     "ts-jest": "^26.0.0",
     "ts-node": "^8.10.1",
